--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h1>오늘의 운세는?</h1>
     </div>
      <div class="button-container">
-        <a href=""https://www.naver.com" class="button">보기</a>
+        <a href="https://www.naver.com" class="button">보기</a>
     </div>
 
     <!-- Bootstrap JavaScript 파일 -->
