--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">무료로 보기</a>
-                    </li>
+                        <a class="nav-link active" aria-current="page" href="https://www.google.com">무료로 보기</a>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">유로로 보기</a>
+                      <a class="nav-link active" aria-current="page" href="https://www.google.com">유료로 보기</a>
                     </li>
                     <!-- 추가 메뉴 항목 필요 시 여기에 추가 -->
                 </ul>
