--- a/index.html
+++ b/index.html
@@ -1,60 +1,48 @@
-<!doctype html>
-<html lang="ko">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>운세</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<!DOCTYPE html>
+<html>
+<head>
     <style>
-            .hero {
-            background-color: #000; /* 어두운 배경 */
-            color: #fff; /* 흰색 글씨 */
-            text-align: center;
-            padding: 50px 0;
-        }
-        .button-container {
-            text-align: center;
-            padding: 20px 0;
-        }
-        .button {
-            background-color: red; /* 빨간색 버튼 */
+        #hero {
+            display: none;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             color: white;
-            padding: 10px 20px;
-            border-radius: 50%; /* 동그라미 모양 */
-            text-decoration: none;
-            font-size: 16px;
+            font-size: 24px;
+        }
+
+        .fortune-cookie {
+            width: 200px;
+            height: auto;
+            cursor: pointer;
+        }
+
+        .container {
+            position: relative;
+            text-align: center;
         }
     </style>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">운세</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="https://www.google.com">무료로 보기</a>
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="https://www.google.com">유료로 보기</a>
-                    </li>
-                    <!-- 추가 메뉴 항목 필요 시 여기에 추가 -->
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <!-- 기존 HTML 내용 -->
-    <div class="hero">
-        <h1>오늘의 운세는?</h1>
-    </div>
-     <div class="button-container">
-        <a href="https://www.naver.com" class="button">보기</a>
+</head>
+<body>
+    <div class="container">
+        <img src=".F1.jpg" id="fortuneCookie" class="fortune-cookie">
+        <div id="hero">오늘의 운세: <span id="fortuneText"></span></div>
     </div>
 
-    <!-- Bootstrap JavaScript 파일 -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  </body>
+    <script>
+        const fortunes = [
+            "대운이 찾아옵니다",
+            "오늘은 휴식이 필요해요",
+            "새로운 만남이 기다리고 있어요",
+            // 여기에 더 많은 운세를 추가할 수 있습니다
+        ];
+
+        document.getElementById("fortuneCookie").onclick = function() {
+            this.src =".F2.jpg";
+            document.getElementById("hero").style.display = "block";
+            document.getElementById("fortuneText").innerText = fortunes[Math.floor(Math.random() * fortunes.length)];
+        }
+    </script>
+</body>
 </html>
