--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>오늘의 운세</title>
     <style>
+        body {
+            background-color: yellow; /* 전체 페이지의 배경색을 노란색으로 설정 */
+        }
         .center {
             text-align: center;
             margin: auto;
