--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>오늘의 운세</title>
     <style>
         body {
-            background-color: yellow; /* 전체 페이지의 배경색을 노란색으로 설정 */
+            background-color: black; /* 전체 페이지의 배경색을 검은색으로 설정 */
         }
         .center {
             text-align: center;
