--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>오늘의 운세</title>
+    <title>오늘의 포춘쿠키</title>
     <style>
         body {
             background-color: yellow; /* 전체 페이지의 배경색을 노란색으로 설정 */
@@ -15,14 +15,12 @@
         #fortune {
             display: none;
             color: black;
-            font-size: 20px;
-            margin-top: 20px;
-        }
-        #resetButton {
+            font-size: 40px;
             margin-top: 20px;
         }
     </style>
 </head>
+    
 <body>
     <div class="center">
         <h1>포춘쿠키를 눌러주세요</h1>
