--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>오늘의 포춘쿠키</title>
+    <title>오늘의 운세</title>
     <style>
         body {
-            background-color: yellow; /* 전체 페이지의 배경색을 노란색으로 설정 */
+            background-color: yellow; /* 전체 페이지의 배경색을 검은색으로 설정 */
         }
         .center {
             text-align: center;
@@ -15,12 +15,14 @@
         #fortune {
             display: none;
             color: black;
-            font-size: 40px;
+            font-size: 20px;
+            margin-top: 20px;
+        }
+        #resetButton {
             margin-top: 20px;
         }
     </style>
 </head>
-    
 <body>
     <div class="center">
         <h1>포춘쿠키를 눌러주세요</h1>
