--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         "오늘 반가운 사람을 만나게 됩니다.",
         "조금만 더 노력하면 원하는 것을 얻을 수 있습니다.",
         "오늘은 재물운이 가득한 날입니다.",
-        "소중한 것의 가치를 깨닫게 되는 날입니다."
-        "오늘 재미있는 이야기를 듣게 될 겁니다."
+        "소중한 것의 가치를 깨닫게 되는 날입니다.",
+        "오늘 재미있는 이야기를 듣게 될 겁니다.",
         "오늘은 마음을 넓게 가져 보는 건 어떨까요."
     ];
 
