--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <div class="center">
     <img id="fortuneImage" src="포춘1.jpg" alt="운세 이미지" style="cursor: pointer;">
     <div id="fortune"></div>
+<div class="center">
     <button id="resetButton" style="display:none;">다시하기</button>
 </div>
 
