--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>오늘의 운세</title>
+    <title>포춘쿠키</title>
     <style>
          body {
             background-color: yellow; /* 전체 페이지의 배경색을 노란색으로 설정 */
@@ -12,14 +12,12 @@
             margin: auto;
             width: 50%;
         }
-
         #fortune {
             display: none;
             color: black;
             font-size: 20px;
             margin-top: 20px;
         }
-
         #resetButton {
             margin-top: 20px;
         }
