--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
+   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>포춘쿠키</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <style>
          body {
-            background-color: yellow; /* 전체 페이지의 배경색을 노란색으로 설정 */
+            background-color: rgb(228, 228, 197); /* 전체 페이지의 배경색을 노란색으로 설정 */
         }
         .center {
             text-align: center;
