--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="ko">
    <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>포춘쿠키</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <style>
+    <link rel="stylesheet" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/easygpt/default.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+      <style>
          body {
             background-color: rgb(228, 228, 197); /* 전체 페이지의 배경색을 노란색으로 설정 */
         }
@@ -18,10 +23,20 @@
             display: none;
             color: black;
             font-size: 20px;
-            margin-top: 20px;
+            margin-top: 30px;
         }
         #resetButton {
+            display: none; /* 초기에는 버튼을 숨깁니다 */
             margin-top: 20px;
+            width: 100%; /* 버튼의 너비를 부모 요소의 너비와 맞춤 */
+        }
+        #fortuneImage {
+            width: 300px; /* 기본 이미지 크기 */
+            margin-top: 30px;
+            transition: transform 0.3s ease; /* 애니메이션 효과 */
+        }
+        #fortuneImage:hover {
+            transform: scale(1.1); /* 마우스 오버 시 이미지 확대 */
         }
     </style>
 </head>
