--- a/index.html
+++ b/index.html
@@ -30,10 +30,15 @@
             margin-top: 20px;
             width: 100%; /* 버튼의 너비를 부모 요소의 너비와 맞춤 */
         }
-        #fortuneImage {
-            width: 300px; /* 기본 이미지 크기 */
-            margin-top: 30px;
-            transition: transform 0.3s ease; /* 애니메이션 효과 */
+
+      #fortuneImage {
+            max-width: 100%; /* 최대 너비를 부모 요소의 100%로 설정 */
+          height: auto; /* 높이를 자동으로 설정하여 비율 유지 */
+          margin: auto; /* 중앙 정렬을 위한 마진 설정 */
+       display: block; /* 블록 레벨 요소로 설정 */
+       transition: transform 0.3s ease; /* 애니메이션 효과 */
+}
+      
         }
         #fortuneImage:hover {
             transform: scale(1.1); /* 마우스 오버 시 이미지 확대 */
