--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
          body {
             background-color: rgb(228, 228, 197); /* 전체 페이지의 배경색을 노란색으로 설정 */
         }
+         h1 {
+          margin-top: 30px; /* 상단 여백을 30픽셀로 설정 */
+         }  
         .center {
             text-align: center;
             margin: auto;
