--- a/index.html
+++ b/index.html
@@ -71,6 +71,28 @@
             transform: translateX(-50%); /* X축 중앙 정렬 */
             width: 10%; /* 버튼의 너비를 부모 요소의 너비와 맞춤 */
         }
+        @media screen and (max-width: 768px) {
+        .center {
+            width: 100%; /* 센터 영역을 화면 너비에 맞춤 */
+            margin: 0; /* 필요한 경우 마진 제거 */
+        }
+
+        #fortuneImage, #fortune, #resetButton {
+            width: 100%; /* 이미지, 텍스트, 버튼 너비를 화면 너비에 맞춤 */
+            max-width: none; /* 최대 너비 제한 제거 */
+        }
+
+        #fortune {
+            font-size: larger; /* 모바일 화면에서 텍스트 크기를 더 크게 */
+            padding: 20px; /* 텍스트 주변 여백 추가 */
+            /* 기타 필요한 스타일 조정 */
+        }
+
+        #resetButton {
+            width: 50%; /* 버튼의 너비 조정 */
+            /* 기타 필요한 버튼 스타일 조정 */
+        }
+    }
     </style>
 </head>
 
