--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
         "오늘 반가운 사람을 만나게 됩니다.",
         "조금만 더 노력하면 원하는 것을 얻을 수 있습니다.",
         "오늘은 재물운이 가득한 날입니다.",
-        "소중한 것의 가치를 깨닫게 되는 날입니다.",
+        "돌다리도 두드려 보고 건너는 게 좋아요.",
+        "가까운 사람에게 따뜻한 말을 건네보세요.",
+        "평소 하고 싶었던 일, 오늘 해보세요.",
         "많이 웃으면 좋은 일이 생길 거예요.",
         "남의 허물을 감싸주는 하루를 보내볼까요.",
         "오늘 아주 재미있는 이야기를 듣게 될 겁니다.",
