--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
             margin: auto;
             width: 50%;
         }
+        .navbar-custom .navbar-nav .nav-link {
+          color: black;
+        }
+        .navbar-custom .navbar-brand {
+        color: black;
+        }
+        .navbar-custom .navbar-toggler-icon {
+            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='black' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+        }
         h1 {
             margin-top: 30px; /* 상단 여백을 30픽셀로 설정 */
         }  
@@ -98,6 +107,26 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">포춘쿠키</a>
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+                 data-bs-target="#navbarNav" aria-controls="navbarNav" 
+                 aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+         </button>
+           <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">오늘의 뉴스</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">오늘의 날씨</a>
+                 </li>
+             </ul>
+            </div>
+        </div>
+    </nav>
     <div class="center">
         <h1>포춘쿠키를 눌러주세요</h1>
         <img id="fortuneImage" src="포춘1.jpg" alt="운세 이미지" style="cursor: pointer;">
