--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
                         <a class="nav-link" href="https://www.ytn.co.kr/">오늘의 뉴스</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://media.naver.com/journalist/052/79603">오늘의 과학</a>
+                        <a class="nav-link" href="https://media.naver.com/journalist/052/79603">과학소식</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://weather.naver.com/today/09440127?cpName=KMA">오늘의 날씨</a>
+                        <a class="nav-link" href="https://weather.naver.com/today/09440127?cpName=KMA">오늘 날씨 보기</a>
                     </li>
              </ul>
             </div>
