--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.ytn.co.kr/">오늘의 뉴스</a>
+                        <a class="nav-link" href="https://www.ytn.co.kr/">뉴스</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://media.naver.com/journalist/052/79603">과학소식</a>
+                        <a class="nav-link" href="https://media.naver.com/journalist/052/79603">과학</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://weather.naver.com/today/09440127?cpName=KMA">오늘 날씨 보기</a>
+                        <a class="nav-link" href="https://weather.naver.com/today/09440127?cpName=KMA">날씨</a>
                     </li>
              </ul>
             </div>
