--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
         "돌다리도 두드려 보고 건너는 게 좋아요.",
         "가까운 사람에게 따뜻한 말을 건네보세요.",
         "평소 하고 싶었던 일, 오늘 해보세요.",
-        "많이 웃으면 좋은 일이 생길 거예요.",
-        "남의 허물을 감싸주는 하루를 보내볼까요.",
+        "많이 웃으면 매우 좋은 일이 생길 거예요.",
+        "남의 허물을 감싸주면 복 받을 거예요.",
         "오늘 아주 재미있는 이야기를 듣게 될 겁니다.",
         "소소한 일에서 기쁨을 찾아보세요.",
         "당연한 것에도 감사하는 마음을 가져보세요.",
-        "오늘은 마음을 넓게 가져 보는 건 어떨까요."
+        "마음을 조금 더 넓게 가져 보아요."
         ];
         var images = ['포춘1.jpg', '포춘2.jpg'];
         var currentImage = 0;
