--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
         }
     }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9216665311141718"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
