--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
         }
     }
     </style>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9216665311141718"
-     crossorigin="anonymous"></script>
+<meta name="google-adsense-account" content="ca-pub-9216665311141718">
 </head>
 
 <body>
