--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
         }
     }
     </style>
-<meta name="google-adsense-account" content="ca-pub-9216665311141718">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9216665311141718"
+     crossorigin="anonymous">
+    </script>
 </head>
 
 <body>
