--- a/index.html
+++ b/index.html
@@ -190,5 +190,8 @@
             isFortuneShown = false;
         };
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9216665311141718"
+     crossorigin="anonymous"></script>
+    
 </body>
 </html>
