--- a/index.html
+++ b/index.html
@@ -124,10 +124,13 @@
                         <a class="nav-link" href="https://www.ytn.co.kr/">뉴스</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://media.naver.com/journalist/052/79603">과학</a>
+                        <a class="nav-link" href="https://www.youtube.com/live/xfFa_kcPnCY?si=2B5eP1dFAYx-QyGt">과학</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://weather.naver.com/today/09440127?cpName=KMA">날씨</a>
+                    </li>
+<li class="nav-item">
+                        <a class="nav-link" href="https://media.naver.com/journalist/052/79603">주인장</a>
                     </li>
              </ul>
             </div>
