--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
         "남의 허물을 감싸주면 복 받을 거예요.",
         "오늘 아주 재미있는 이야기를 듣게 될 겁니다.",
         "소소한 일에서 기쁨을 찾아보세요.",
+        "오랫동안 만나지 못한 사람에게 연락을 해보세요.",
+        "평소에 가던 길이 아닌, 다른 길로 돌아가보세요.",
         "당연한 것에도 감사하는 마음을 가져보세요.",
         "옆사람을 칭찬해주세요. 작은 행운이 생깁니다."
         ];
