--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://weather.naver.com/today/09440127?cpName=KMA">날씨</a>
+                        <a class="nav-link" href="https://www.weather.go.kr/w/index.do">날씨</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://www.ytn.co.kr/">뉴스</a>
