--- a/index.html
+++ b/index.html
@@ -31,33 +31,39 @@
             background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='black' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
         }
         h1 {
-            margin-top: 30px; 
+            margin-top: 20px; 
         }  
-        #fortuneImage {
-            max-width: 100%; 
-            height: auto; 
-            margin: auto; 
-            margin-top: 30px;
-            display: block; 
-            transition: transform 0.3s ease; 
-        }
+    .container {
+        position: relative;
+        text-align: center; /* 이미지를 중앙에 정렬하기 위함 */
+        margin-top: 30px;
+    }
+    #fortuneImage {
+        max-width: 100%; 
+        height: auto; 
+        margin: auto; 
+        margin-top: 30px;
+        display: block; 
+        transition: transform 0.3s ease;
+    }
+        
         #fortuneImage:hover {
             transform: scale(1.05); 
         }
-        #fortune {
-            display: none;
-            color: black;
-            font-size: 10px;
-            position: absolute; 
-            top: 30%; 
-            left: 50%; 
-            transform: translate(-50%, -50%); 
-            display: none; 
-            color: black;
-            text-align: center; 
-            background-color: white; 
-            padding: 10px; 
-        }
+
+#fortune {
+        display: none;
+        color: black;
+        font-size: 10px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: black;
+        text-align: center;
+        background-color: white;
+        padding: 10px;
+    }
         .animate-text {
             animation: textExpand 2s forwards; 
         }
@@ -75,9 +81,10 @@
         }
         #resetButton {
             display: none; 
-            position: absolute; 
+            position: relative; 
             align-content: center;
             margin-top: 15px;
+            margin-bottom: 60px;
             left: 50%; 
             transform: translateX(-50%); 
             width: 10%; 
@@ -143,11 +150,14 @@
     </div>
     <div class="center">
         <h1>포춘쿠키를 눌러주세요</h1>
+      <div class="container">
         <img id="fortuneImage" src="포춘1.jpg" alt="운세 이미지" style="cursor: pointer;">
         <div id="fortune"></div>
         <button id="resetButton" style="display:none;">다시하기</button>
-        <h1>심리테스트</h1>
-        <h3>좋아하는 동물을 선택해보세요.</h3>
+      </div>
+     <div class="center">
+        <h1>심리테스트를 해보세요.</h1>
+        <h8>좋아하는 동물을 선택하세요.</h8>
             <div id="A" class="card">강아지</div>
         <div id="interpretationA" class="hidden">당신은 강아지를 좋아하는 사람입니다.</div>
         <div id="B" class="card">고양이</div>
