--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9216665311141718"
-    crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/easygpt/default.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
-    <title>소라world</title>
+    <title>Welcome to sora world</title>
     <style>
         body {
             background-color: rgb(228, 228, 197); 
@@ -32,26 +27,24 @@
         }
         h1 {
             margin-top: 20px; 
+            margin-bottom: 20px; 
         }  
-    .container {
+        .container {
         position: relative;
-        text-align: center; /* 이미지를 중앙에 정렬하기 위함 */
-        margin-top: 30px;
-    }
-    #fortuneImage {
-        max-width: 100%; 
-        height: auto; 
-        margin: auto; 
-        margin-top: 30px;
-        display: block; 
-        transition: transform 0.3s ease;
-    }
-        
+        text-align: center;
+        margin-top: 20px;
+        }
+        #fortuneImage {
+         max-width: 100%; 
+         height: auto; 
+         margin: auto; 
+         display: block; 
+         transition: transform 0.3s ease;
+         }
         #fortuneImage:hover {
             transform: scale(1.05); 
         }
-
-#fortune {
+        #fortune {
         display: none;
         color: black;
         font-size: 10px;
@@ -63,7 +56,7 @@
         text-align: center;
         background-color: white;
         padding: 10px;
-    }
+        }
         .animate-text {
             animation: textExpand 2s forwards; 
         }
@@ -79,15 +72,10 @@
                 transform: translate(-50%, -50%);
             }
         }
-        #resetButton {
-            display: none; 
-            position: relative; 
-            align-content: center;
+        #resetButton {  
             margin-top: 15px;
-            margin-bottom: 60px;
-            left: 50%; 
-            transform: translateX(-50%); 
-            width: 10%; 
+            margin-bottom: 15px;
+            width: 50%; 
         }
         .card {
         border: 1px solid #ddd;
@@ -150,15 +138,15 @@
     </div>
     <div class="center">
         <h1>포춘쿠키를 눌러주세요</h1>
-      <div class="container">
+    <div class="container">
         <img id="fortuneImage" src="포춘1.jpg" alt="운세 이미지" style="cursor: pointer;">
         <div id="fortune"></div>
-        <button id="resetButton" style="display:none;">다시하기</button>
-      </div>
-     <div class="center">
+        <button id="resetButton">한 개 더 줘!</button>
+    </div>
+    <div class="container">
         <h1>심리테스트를 해보세요.</h1>
         <h8>좋아하는 동물을 선택하세요.</h8>
-            <div id="A" class="card">강아지</div>
+        <div id="A" class="card">강아지</div>
         <div id="interpretationA" class="hidden">당신은 강아지를 좋아하는 사람입니다.</div>
         <div id="B" class="card">고양이</div>
         <div id="interpretationB" class="hidden">당신은 강아지를 좋아하는 사람입니다.</div>
@@ -167,6 +155,11 @@
         <div id="D" class="card">개구리</div>
         <div id="interpretationD" class="hidden">당신은 강아지를 좋아하는 사람입니다.</div>
     </div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9216665311141718"
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
     <script>
         var fortunes = [
         "오늘 식사가 아주 맛있겠군요.",
@@ -200,7 +193,7 @@
                 fortuneText.innerText = fortunes[randomIndex];
                 fortuneText.classList.add('animate-text'); // 애니메이션 클래스 추가
                 fortuneText.style.display = 'block';
-                resetButton.style.display = 'block';
+                resetButton.style.display;
                 isFortuneShown = true;
             }
         };
@@ -210,7 +203,7 @@
             fortuneImage.classList.remove('no-hover');
             fortuneText.style.display = 'none';
             fortuneText.classList.remove('animate-text'); // 애니메이션 클래스 제거
-            resetButton.style.display = 'none';
+            resetButton.style.display;
             isFortuneShown = false;
         };
         const floatingWindow = document.getElementById('floatingWindow');
