--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/easygpt/default.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Welcome to sora world</title>
     <style>
         body {
             background-color: rgb(228, 228, 197); 
         }
+        h1 {
+            margin-top: 20px; 
+            margin-bottom: 20px; 
+        }
         .center {
             text-align: center;
             margin: auto;
             width: 50%;
+        }
+        .hidden {
+        display: none;
         }
         .navbar-custom .navbar-nav .nav-link {
           color: black;
@@ -25,10 +31,9 @@
         .navbar-custom .navbar-toggler-icon {
             background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='black' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
         }
-        h1 {
-            margin-top: 20px; 
-            margin-bottom: 20px; 
-        }  
+        .animate-text {
+            animation: textExpand 2s forwards; 
+        }
         .container {
         position: relative;
         text-align: center;
@@ -57,9 +62,6 @@
         background-color: white;
         padding: 10px;
         }
-        .animate-text {
-            animation: textExpand 2s forwards; 
-        }
         @keyframes textExpand {
             from {
                 font-size: 0px; 
@@ -72,43 +74,51 @@
                 transform: translate(-50%, -50%);
             }
         }
-        #resetButton {  
+        #resetButton {  
             margin-top: 15px;
             margin-bottom: 15px;
             width: 50%; 
         }
-        .card {
-        border: 1px solid #ddd;
-        max-width: 100%; 
-        margin: auto; 
-        width: 50%;
-        padding: 10px;
-        text-align: center;
-        cursor: pointer;
+        .card-container {
+            perspective: 1000px;
         }
-        .hidden {
-        display: none;
+        .card {
+            border: 1px solid #ddd;
+            margin: auto;
+            width: 70%;
+            padding: 10px;
+            text-align: center;
+            height: 50px;
+            transform-style: preserve-3d;
+            transition: transform 0.5s;
+            cursor: pointer;
+        }
+        .card-front, .card-back {
+            position: absolute;
+            backface-visibility: hidden;
+            width: 100%;
+            height: 100%;
+        }
+        .card-front {
+            /* styling for the front of the card */
+        }
+
+        .card-back {
+            /* styling for the back of the card */
+            transform: rotateY(180deg);
+        }
+        .card.flipped {
+            transform: rotateY(180deg);
         }
         @media screen and (max-width: 768px) {
             .center {
                 width: 100%; 
                 margin: 0; 
             }
-            #fortuneImage {
-                width: 100%;
-            }
-            #fortune {
-                width: 90%;
-                font-size: 12px; 
-                top: 30%; 
-                padding: 10px; 
-            }
             #resetButton {
-                width: 30%; 
-                margin-top: 15px;
+                width: 30%;
             }
-        }
-        
+        }        
     </style>
 </head>
 <body>
@@ -146,14 +156,30 @@
     <div class="container">
         <h1>심리테스트를 해보세요.</h1>
         <h8>좋아하는 동물을 선택하세요.</h8>
-        <div id="A" class="card">강아지</div>
-        <div id="interpretationA" class="hidden">당신은 강아지를 좋아하는 사람입니다.</div>
-        <div id="B" class="card">고양이</div>
-        <div id="interpretationB" class="hidden">당신은 강아지를 좋아하는 사람입니다.</div>
-        <div id="C" class="card">사자</div>
-        <div id="interpretationC" class="hidden">당신은 강아지를 좋아하는 사람입니다.</div>
-        <div id="D" class="card">개구리</div>
-        <div id="interpretationD" class="hidden">당신은 강아지를 좋아하는 사람입니다.</div>
+        <div class="card-container" id="A">
+            <div class="card">
+                <div class="card-front">강아지</div>
+                <div class="card-back">당신은 강아지를 좋아하는 사람입니다.</div>
+            </div>
+        </div>
+        <div class="card-container" id="B">
+            <div class="card">
+                <div class="card-front">고양이</div>
+                <div class="card-back">당신은 강아지를 좋아하는 사람입니다</div>
+            </div>
+        </div>
+        <div class="card-container" id="C">
+            <div class="card">
+                <div class="card-front">사자</div>
+                <div class="card-back">당신은 강아지를 좋아하는 사람입니다</div>
+            </div>
+        </div>
+        <div class="card-container" id="D">
+            <div class="card">
+                <div class="card-front">개구리</div>
+                <div class="card-back">당신은 강아지를 좋아하는 사람입니다</div>
+            </div>
+        </div>
     </div>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9216665311141718"
     crossorigin="anonymous"></script>
@@ -225,12 +251,9 @@
             content.innerHTML = '';
             floatingWindow.style.display = 'none';
         });
-
-
         function toggleInterpretation(choice) {
-            var interpretationId = "interpretation" + choice;
-            var interpretationElement = document.getElementById(interpretationId);
-            interpretationElement.classList.toggle('hidden');
+            var cardElement = document.getElementById(choice).querySelector('.card');
+            cardElement.classList.toggle('flipped');
         }
         document.getElementById("A").onclick = function() { toggleInterpretation("A"); };
         document.getElementById("B").onclick = function() { toggleInterpretation("B"); };
