--- a/index.html
+++ b/index.html
@@ -108,20 +108,23 @@
             transform: rotateY(180deg);
         }
         .canvas-container {
-            display: flex;
-            flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
         }
         #canvas {
-            border: 1px solid black;
+            border: 5px solid rgb(80, 84, 4);
+            margin-top: 10px;
             cursor: pointer;
         }
         .button-container {
             text-align: center; 
             margin-top: 10px;
         }
+        .divider {
+            border-bottom: 10px solid #383535;
+            margin: 20px 0; 
+        }    
         @media screen and (max-width: 768px) {
             .center {
                 width: 100%; 
@@ -130,10 +133,6 @@
             #resetButton {
                 width: 30%;
             }
-        }    
-        .divider {
-            border-bottom: 10px solid #383535;
-            margin: 20px 0; 
         }    
     </style>
 </head>
@@ -199,7 +198,8 @@
         </div>
     <div class="divider"></div>
         <div class="canvas-container">
-            <canvas id="canvas" width="500" height="500"></canvas>
+            <h1>그림을 그려보세요.</h1>
+            <canvas id="canvas" width="400" height="500"></canvas>
             <div class="button-container">
                 <button id="refreshButton">새로고침</button>
             </div>
