--- a/index.html
+++ b/index.html
@@ -287,40 +287,53 @@
 
         let painting = false;
 
-        function startPosition(e) {
-            painting = true;
-            draw(e);
-        }
+// 기존의 mouse event 핸들러는 유지
 
-        function finishedPosition() {
-            painting = false;
-            ctx.beginPath();
-        }
+function startPainting(e) {
+    painting = true;
+    draw(e);
+}
 
-        function draw(e) {
-        if (!painting) return;
+function stopPainting() {
+    painting = false;
+    ctx.beginPath();
+}
 
-        const rect = canvas.getBoundingClientRect();
-        const x = e.clientX - rect.left;
-        const y = e.clientY - rect.top;
+function handleMouseMove(e) {
+    if (!painting) return;
+    const rect = canvas.getBoundingClientRect();
+    let x, y;
 
-        ctx.lineWidth = 5;
-        ctx.lineCap = 'round';
-        ctx.strokeStyle = 'black';
-
-        ctx.lineTo(x, y);
-        ctx.stroke();
-        ctx.beginPath();
-        ctx.moveTo(x, y);
+    if (e.type === 'touchmove') {
+        x = e.touches[0].clientX - rect.left;
+        y = e.touches[0].clientY - rect.top;
+    } else {
+        x = e.clientX - rect.left;
+        y = e.clientY - rect.top;
     }
-        function clearCanvas() {
+
+    ctx.lineTo(x, y);
+    ctx.stroke();
+    ctx.beginPath();
+    ctx.moveTo(x, y);
+}
+
+canvas.addEventListener('mousedown', startPainting);
+canvas.addEventListener('mouseup', stopPainting);
+canvas.addEventListener('mouseleave', stopPainting);
+canvas.addEventListener('mousemove', handleMouseMove);
+
+function clearCanvas() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
         }
 
-        canvas.addEventListener('mousedown', startPosition);
-        canvas.addEventListener('mouseup', finishedPosition);
-        canvas.addEventListener('mousemove', draw);
-        document.getElementById('refreshButton').addEventListener('click', clearCanvas);
+        
+// 터치 이벤트 핸들러 추가
+canvas.addEventListener('touchstart', startPainting);
+canvas.addEventListener('touchend', stopPainting);
+canvas.addEventListener('touchcancel', stopPainting);
+canvas.addEventListener('touchmove', handleMouseMove);
+document.getElementById('refreshButton').addEventListener('click', clearCanvas);
 
     </script>
 </body>
