--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         color: black;
         text-align: center;
         background-color: white;
+        width: 85%;
         }
         @keyframes textExpand {
             from {
