index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
             border: 1px solid #ddd;
             margin: auto;
             width: 70%;
-            padding: 10px;
             text-align: center;
             font-size: 12px;
             height: 50px;
@@ -188,19 +187,19 @@
         <div class="card-container" id="B">
             <div class="card">
                 <div class="card-front">고양이</div>
-                <div class="card-back">당신은 강아지를 좋아하는 사람입니다</div>
+                <div class="card-back">당신은 강아지를 좋아하는 사람입니다.</div>
             </div>
         </div>
         <div class="card-container" id="C">
             <div class="card">
                 <div class="card-front">사자</div>
-                <div class="card-back">당신은 강아지를 좋아하는 사람입니다</div>
+                <div class="card-back">당신은 강아지를 좋아하는 사람입니다.</div>
             </div>
         </div>
         <div class="card-container" id="D">
             <div class="card">
                 <div class="card-front">개구리</div>
-                <div class="card-back">당신은 강아지를 좋아하는 사람입니다</div>
+                <div class="card-back">당신은 강아지를 좋아하는 사람입니다.</div>
             </div>
         </div>
     <div class="divider"></div>
