--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </div>
     <div class="divider"></div>
       
-    <h1> 다음엔 뭐가 추가될까요?</h>
+    <h1> 다음에 추가될 게임은?</h>
     </div>
   
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9216665311141718"
