--- a/index.html
+++ b/index.html
@@ -175,9 +175,8 @@
         <button id="closeButton" class="btn btn-danger float-right">닫기</button>
         <div id="content"></div>
     </div>
-
+    <h1>생일을 입력하고, 쿠키를 눌러주세요.</h1>
     <div class="date-picker">
-        <h1>생년월일을 입력하세요.</h1>
         <label for="year">연도:</label>
         <select id="year">
             <option value="" disabled selected>연도 선택</option>
@@ -212,7 +211,6 @@
         <p id="result"></p>
     </div>
     <div class="fortune-container">
-        <h1>포춘쿠키를 눌러주세요</h1>
         <img id="fortuneImage" src="포춘1.jpg" alt="운세 이미지" style="cursor: pointer;">
         <div id="fortune"></div>
         <button id="resetButton">한 개 더 줘!</button>
@@ -245,7 +243,7 @@
     </div>
     <div class="divider"></div>
     <div class="canvas-container">
-        <h1>그림을 그려보세요.</h1>
+        <h1>마음을 그림으로 표현해보세요.</h1>
         <canvas id="canvas" ></canvas>
         <div class="button-container">
             <button id="refreshButton">새로고침</button>
