--- a/game1.html
+++ b/game1.html
@@ -90,9 +90,10 @@
             }
             #resetButton {
                 width: 30%;
+            }   
+            .date-picker {
+                width: 100%;
             }
-        }    
-        .date-picker {
         }
     </style>
     <script>
