game1.html 업데이트

--- a/game1.html
+++ b/game1.html
@@ -126,7 +126,9 @@
             </div>
         </nav>
 
-    <h1>쿠키를 눌러주세요.</h1>
+    <h1>2023년 1월 1일에 태어난<br>
+INFP 남성이시군요.<br>
+쿠키를 눌러주세요.</h1>
 
     <div class="fortune-container">
         <img id="fortuneImage" src="포춘1.jpg" alt="운세 이미지" style="cursor: pointer;">
