--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </nav>
   
     <h1>내 정보를 입력해 주세요.</h1>
-    <img src="과학자.jpg" width="70%" height="auto">
+    <img src="분석가.jpg" width="30%" height="auto">
     <form id="mbtiForm">
         <label for="gender">성별:</label>
         <select name="gender" id="gender">
