--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             width: 100%;
         }
         h1 {
-            margin-top: 15px; 
+            margin-top: 15px;
             margin-bottom: 15px; 
         }
         .hidden {
@@ -36,6 +36,13 @@
         button {
             margin-top: 5px; 
             margin-bottom: 5px;   
+        }
+
+        @media screen and (max-width: 768px) {
+            .center {
+                width: 100%; 
+                margin: 0; 
+            }
         }
     </style>
 </head>
