--- a/m230101infp.html
+++ b/m230101infp.html
@@ -120,8 +120,7 @@
             </div>
         </nav>
 
-        <h1>2023년 1월 1일에 태어난<br>
-        INFP 남성이시군요.<br>
+        <h1>결과가 나왔습니다.<br>
         쿠키를 눌러주세요.</h1>
 
         <div class="fortune-container">
