--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </form>
         <script>
                 function submitForm() {
-                    window.location.href = 'm230101infp.html'; // 페이지 이동 변경
+                    window.location.href = 'game1.html'; 
                 }
         </script>
     </div>
